@@ -53,21 +53,21 @@
 #include "gimp-intl.h"
 
 
-typedef struct _RaiseClosure RaiseClosure;
-
-struct _RaiseClosure
+typedef struct
 {
   const gchar *name;
   gboolean     found;
-};
+} RaiseClosure;
 
 
 /*  local function prototypes  */
 
-static void   documents_open_image    (GimpContext   *context,
+static void   documents_open_image    (GtkWidget     *editor,
+                                       GimpContext   *context,
                                        GimpImagefile *imagefile);
-static void   documents_raise_display (gpointer       data,
-                                       gpointer       user_data);
+static void   documents_raise_display (GimpDisplay   *display,
+                                       RaiseClosure  *closure);
+
 
 
 /*  public functions */
@@ -88,7 +88,7 @@ documents_open_cmd_callback (GtkAction *action,
 
   if (imagefile && gimp_container_have (container, GIMP_OBJECT (imagefile)))
     {
-      documents_open_image (context, imagefile);
+      documents_open_image (GTK_WIDGET (editor), context, imagefile);
     }
   else
     {
@@ -118,11 +118,11 @@ documents_raise_or_open_cmd_callback (GtkAction *action,
       closure.found = FALSE;
 
       gimp_container_foreach (context->gimp->displays,
-                              documents_raise_display,
+                              (GFunc) documents_raise_display,
                               &closure);
 
       if (! closure.found)
-        documents_open_image (context, imagefile);
+        documents_open_image (GTK_WIDGET (editor), context, imagefile);
     }
 }
 
@@ -299,7 +299,8 @@ documents_remove_dangling_cmd_callback (GtkAction *action,
 /*  private functions  */
 
 static void
-documents_open_image (GimpContext   *context,
+documents_open_image (GtkWidget     *editor,
+                      GimpContext   *context,
                       GimpImagefile *imagefile)
 {
   const gchar        *uri;
@@ -316,7 +317,7 @@ documents_open_image (GimpContext   *context,
     {
       gchar *filename = file_utils_uri_display_name (uri);
 
-      gimp_message (context->gimp, NULL, GIMP_MESSAGE_ERROR,
+      gimp_message (context->gimp, G_OBJECT (editor), GIMP_MESSAGE_ERROR,
                     _("Opening '%s' failed:\n\n%s"),
                     filename, error->message);
       g_clear_error (&error);
@@ -326,14 +327,10 @@ documents_open_image (GimpContext   *context,
 }
 
 static void
-documents_raise_display (gpointer data,
-                         gpointer user_data)
+documents_raise_display (GimpDisplay  *display,
+                         RaiseClosure *closure)
 {
-  GimpDisplay  *display = data;
-  RaiseClosure *closure = user_data;
-  const gchar  *uri;
-
-  uri = gimp_object_get_name (GIMP_OBJECT (display->image));
+  const gchar  *uri = gimp_object_get_name (GIMP_OBJECT (display->image));
 
   if (uri && ! strcmp (closure->name, uri))
     {
